position css bugs & input overflow fix

--- a/static/css/out.css
+++ b/static/css/out.css
@@ -129,13 +129,15 @@ article {
   margin: 0;
   margin-left: calc(var(--text-start)  + var(--rule-start));
   flex-direction: row;
+  gap: .5rem;
   margin-top: 2px;
   display: flex;
 }
 
 .card autowidth-input {
-  min-width: 5ch;
-  max-width: 30ch;
+  min-width: 5.8ch;
+  max-width: 17ch;
+  margin: 2px 0 -2px;
   font-size: 16px;
 }
 
